Fixed turnover logic

--- a/src/app/enigma/control-panel/control-panel.component.html
+++ b/src/app/enigma/control-panel/control-panel.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="control-buttons">
     <span class="button" (click)="toggleRingSettings()">{{getRingSettingsText()}}</span>
-    <span class="button" (click)="resetSettings()">Reset Settings</span>
+    <span class="button" (click)="resetSettings()">Reset Machine</span>
     <span class="button" (click)="saveMachineSettings()">Save Settings</span>
     <span class="button" *ngIf="machineConfigurationAvailable" (click)="loadMachineSettings()">Load Settings</span>
   </div>
