--- a/src/app/enigma/control-panel/control-panel.component.scss
+++ b/src/app/enigma/control-panel/control-panel.component.scss
@@ -20,6 +20,7 @@
             cursor: pointer;
             transition: all .1s ease-in-out;
             user-select: none;
+            font-weight: bold;
         }
     
         .button:active {
