--- a/src/app/enigma/output/output.component.html
+++ b/src/app/enigma/output/output.component.html
@@ -5,6 +5,6 @@
   </div>
   <div class="textareas d-flex">
     <span class="input">{{inputContent}}</span>
-    <span class="output">{{outputContent}}</span>
+    <span class="output" (click)="copyOutput()">{{outputContent}}</span>
   </div>
 </div>
