--- a/src/app/enigma/output/output.component.scss
+++ b/src/app/enigma/output/output.component.scss
@@ -12,6 +12,7 @@
             margin: 10px;
             border: 2px solid #E1C16E;
             border-radius: 10px;
+            font-weight: bold;
             width: 140px;
             height: 30px;
             font-size: 9pt;
@@ -31,6 +32,10 @@
         text-transform: uppercase;
         font-size: 13pt;
         margin: 10px;
+    }
+
+    .output {
+        cursor: pointer;
     }
 }
 
