--- a/src/app/support/footer/footer.component.html
+++ b/src/app/support/footer/footer.component.html
@@ -1,5 +1,6 @@
 <div class="container pt-2 pb-2">
-  <span class="footer-message">Designed and built by PM Software © 2023</span>
+  <span class="footer-message">Pawel Maslak Production</span>
+  <span class="footer-message">PM Software © 2023</span>
   <span class="pm-logo">
     <a href="https://pawelmaslak.com" target="_blank">
       <img src="../../../assets/images/pm-logo.svg" />
