--- a/src/app/enigma/plugboard/plugboard.component.html
+++ b/src/app/enigma/plugboard/plugboard.component.html
@@ -1,4 +1,4 @@
-<div class="container pt-3 pb-5">
+<div class="container">
   <div class="plugboard">
     <div class="d-flex justify-content-center align-items-center pt-1">
       <div
