--- a/src/app/enigma/enigma.component.html
+++ b/src/app/enigma/enigma.component.html
@@ -1,12 +1,5 @@
-<div class="container d-flex pt-5 pb-5" *ngIf="!compactEnigmaVisible">
+<div class="container d-flex pt-5 pb-5">
   <div class="enigma">
-    <!-- <div class="row">
-      <button type="button" (click)="toggleEnigmaButton()" class="btn btn-primary toggle-button">
-        {{getEnigmaToggleButtonText()}}
-      </button>
-      <button type="button" class="btn btn-primary toggle-button">Show summary</button>
-      <button type="button" class="btn btn-warning reset-button">Reset</button>
-    </div> -->
     <div class="row">
       <app-control-panel [rotorSection]="rotorSection" [plugboard]="plugboard"></app-control-panel>
     </div>
