--- a/src/app/enigma/enigma.component.html
+++ b/src/app/enigma/enigma.component.html
@@ -1,7 +1,6 @@
 <div class="container d-flex pt-5 pb-5">
   <div class="enigma">
-    <div class="row">
-      <!-- <app-control-panel [rotorSection]="rotorSection" [plugboard]="plugboard"></app-control-panel> -->
+    <div class="control-panel">
       <div class="control-buttons">
         <span class="button" (click)="toggleRingSettings()">{{getRingSettingsText()}}</span>
         <span class="button" (click)="saveMachineSettings()">Save Settings</span>
