--- a/src/app/enigma/enigma.component.scss
+++ b/src/app/enigma/enigma.component.scss
@@ -26,6 +26,7 @@
 
 .control-buttons {
     display: flex;
+    background-image: url(../../assets/images/texture.jpg);
     
     .button {
         display: flex;
