Added dev button settings styling

--- a/src/app/enigma/enigma.component.html
+++ b/src/app/enigma/enigma.component.html
@@ -5,7 +5,7 @@
         <span class="button" (click)="toggleRingSettings()">{{getRingSettingsText()}}</span>
         <span class="button" (click)="saveMachineSettings()">Save Settings</span>
         <span class="button" *ngIf="machineConfigurationAvailable" (click)="loadMachineSettings()">Load Settings</span>
-        <span class="button" (click)="getSettings()">Get Settings</span>
+        <span class="button-dev" (click)="getSettings()">DEV - Settings</span>
       </div>
     </div>
     <div class="row">
