--- a/src/app/enigma/output/output.component.scss
+++ b/src/app/enigma/output/output.component.scss
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    background-image: url("../../../assets/images/texture.jpg");
+    width: 800px;
 
     .labels {
         width: 100%;
@@ -23,19 +23,32 @@
         }
     }
 
-    .output, .input {
-        height: 150px;
-        border: 2px solid #E1C16E;
-        width: 100%;
-        border-radius: 5px;
-        background-color: papayawhip;
-        text-transform: uppercase;
-        font-size: 13pt;
-        margin: 10px;
-    }
+    .textareas {
+        textarea {
+            resize: none;
+            width: 380px;
+            background-color: papayawhip;
+            border-radius: 5px;
+            margin-left: 10px;
+            margin-right: 10px;
+            user-select: none;
+            border: 2px solid #E1C16E;
+            text-transform: uppercase;
+            font-size: 13pt;
+        }
 
-    .output {
-        cursor: pointer;
+        .input-area {
+            cursor: default;
+        }
+
+        .output-area {
+            cursor: pointer;
+        }
+
+        textarea:focus {
+            outline: none;
+        }
     }
 }
+
 
