Code clean up for release version

--- a/src/app/enigma/enigma.component.html
+++ b/src/app/enigma/enigma.component.html
@@ -1,34 +1,3 @@
-<!-- <div class="container d-flex pt-5 pb-5">
-  <div class="enigma">
-    <div class="control-panel">
-      <div class="control-buttons">
-        <span class="button" (click)="toggleRingSettings()">{{getRingSettingsText()}}</span>
-        <span class="button" (click)="saveMachineSettings()">Save Settings</span>
-        <span class="button" *ngIf="machineConfigurationAvailable" (click)="loadMachineSettings()">Load Settings</span>
-        <span class="button-dev" (click)="getSettings()">DEV - Settings</span>
-      </div>
-    </div>
-    <div class="row">
-      <app-logo></app-logo>
-    </div>
-    <div class="row">
-      <app-rotor-section [rotorSection]="rotorSection"></app-rotor-section>
-    </div>
-    <div class="row">
-      <app-output-lamps></app-output-lamps>
-    </div>
-    <div class="row">
-      <app-input-keyboard></app-input-keyboard>
-    </div>
-    <div class="row">
-      <app-plugboard [plugboard]="plugboard"></app-plugboard>
-    </div>
-    <div class="row">
-      <app-output></app-output>
-    </div>
-  </div>
-</div> -->
-
 <div class="container wrapper pt-5 pb-5">
   <div class="enigma">
     <div class="section-content">
@@ -36,7 +5,7 @@
         <span class="button" (click)="toggleRingSettings()">{{getRingSettingsText()}}</span>
         <span class="button" (click)="saveMachineSettings()">Save Settings</span>
         <span class="button" *ngIf="machineConfigurationAvailable" (click)="loadMachineSettings()">Load Settings</span>
-        <span class="button-dev" (click)="getSettings()">DEV - Settings</span>
+        <span *ngIf="isDevelopment" class="button-dev" (click)="getSettings()">DEV - Settings</span>
       </div>
     </div>
     <div class="section-content"><app-logo></app-logo></div>
