Added top menu + wiki component

--- a/src/app/support/top-menu/top-menu.component.html
+++ b/src/app/support/top-menu/top-menu.component.html
@@ -1,1 +1,16 @@
-<p>top-menu works!</p>
+<div class="top-menu">
+  <div class="container">
+    <div class="col-4 menu-section">
+      <span class="menu-item">Enigma Wiki</span>
+      <span class="menu-item">Enigma</span>
+    </div>
+    <div class="col-4 menu-section">
+      <span class="pm-logo">
+        <img src="../../../assets/images/pm-logo.svg" />
+      </span>
+    </div>
+    <div class="col-4 menu-section">
+      <span class="menu-item">About</span>
+    </div>
+  </div>
+</div>
