--- a/src/app/enigma/output/output.component.scss
+++ b/src/app/enigma/output/output.component.scss
@@ -27,7 +27,7 @@
         textarea {
             resize: none;
             width: 380px;
-            background-color: papayawhip;
+            background-color: #E0C9A6;
             border-radius: 5px;
             margin-left: 10px;
             margin-right: 10px;
