--- a/src/app/support/top-menu/top-menu.component.html
+++ b/src/app/support/top-menu/top-menu.component.html
@@ -1,8 +1,8 @@
 <div class="top-menu">
   <div class="container">
     <div class="col-4 menu-section">
-      <span class="menu-item" routerLink="/wiki">Enigma Wiki</span>
       <span class="menu-item" routerLink="/enigma">Enigma</span>
+      <span class="menu-item" routerLink="/wiki">Wiki</span>
     </div>
     <div class="col-4 menu-section">
       <span class="pm-logo">
