Added basic loading logic of the images

--- a/src/app/support/top-menu/top-menu.component.html
+++ b/src/app/support/top-menu/top-menu.component.html
@@ -10,7 +10,7 @@
       </span>
     </div>
     <div class="col-4 menu-section">
-      <span class="menu-item">About</span>
+      <span class="menu-item" routerLink="/about">About</span>
     </div>
   </div>
 </div>
