Plugboard initial fix

--- a/src/app/enigma/plugboard/plugboard.component.html
+++ b/src/app/enigma/plugboard/plugboard.component.html
@@ -66,34 +66,34 @@
   </div>
   <div class="plugboard-summary d-flex justify-content-center pt-3">
     <div class="letter-pair">
-      <span class="letter" *ngIf="letterPairs[0]"> {{getLetterPairString(0)}} </span>
+      <span class="letter" *ngIf="plugboard.letterPairs[0]"> {{getLetterPairString(0)}} </span>
     </div>
     <div class="letter-pair">
-      <span class="letter" *ngIf="letterPairs[1]"> {{getLetterPairString(1)}} </span>
+      <span class="letter" *ngIf="plugboard.letterPairs[1]"> {{getLetterPairString(1)}} </span>
     </div>
     <div class="letter-pair">
-      <span class="letter" *ngIf="letterPairs[2]"> {{getLetterPairString(2)}} </span>
+      <span class="letter" *ngIf="plugboard.letterPairs[2]"> {{getLetterPairString(2)}} </span>
     </div>
     <div class="letter-pair">
-      <span class="letter" *ngIf="letterPairs[3]"> {{getLetterPairString(3)}} </span>
+      <span class="letter" *ngIf="plugboard.letterPairs[3]"> {{getLetterPairString(3)}} </span>
     </div>
     <div class="letter-pair">
-      <span class="letter" *ngIf="letterPairs[4]"> {{getLetterPairString(4)}} </span>
+      <span class="letter" *ngIf="plugboard.letterPairs[4]"> {{getLetterPairString(4)}} </span>
     </div>
     <div class="letter-pair">
-      <span class="letter" *ngIf="letterPairs[5]"> {{getLetterPairString(5)}} </span>
+      <span class="letter" *ngIf="plugboard.letterPairs[5]"> {{getLetterPairString(5)}} </span>
     </div>
     <div class="letter-pair">
-      <span class="letter" *ngIf="letterPairs[6]"> {{getLetterPairString(6)}} </span>
+      <span class="letter" *ngIf="plugboard.letterPairs[6]"> {{getLetterPairString(6)}} </span>
     </div>
     <div class="letter-pair">
-      <span class="letter" *ngIf="letterPairs[7]"> {{getLetterPairString(7)}} </span>
+      <span class="letter" *ngIf="plugboard.letterPairs[7]"> {{getLetterPairString(7)}} </span>
     </div>
     <div class="letter-pair">
-      <span class="letter" *ngIf="letterPairs[8]"> {{getLetterPairString(8)}} </span>
+      <span class="letter" *ngIf="plugboard.letterPairs[8]"> {{getLetterPairString(8)}} </span>
     </div>
     <div class="letter-pair">
-      <span class="letter" *ngIf="letterPairs[9]"> {{getLetterPairString(9)}} </span>
+      <span class="letter" *ngIf="plugboard.letterPairs[9]"> {{getLetterPairString(9)}} </span>
     </div>
   </div>
 </div>
